dropdown z-index fix

--- a/source/styles/blocks/header.scss
+++ b/source/styles/blocks/header.scss
@@ -71,6 +71,7 @@
 	bottom: 0;
 	transform: translateY(100%);
 	background-color: var(--back-color);
+	z-index: 2;
 }
 
 @media (max-width: 1646px) {
